# UsyTrace

./: .gitignore  CMakeLists.txt  README.md  a.out.js  a.out.wasm  build.bat  build.js  buildWasm.bat  imageTracer.cpp  index.html  init.js  minify-css.js  package-lock.json  package.json  release-builder.py  server.js  trace.css  trace.js  worker.js  worker_wasm.js
.github/workflows/: main.yml
scripts/: build.bat  build.js  common.js  server.js
src/: about.js  imageTracer.cpp  index.html  init.js  main.css  main.js  popup.css  popups.js  service-worker.js  shared.css  state.js  themes.js  trace.css  trace.js  tutorial.css  tutorial.js  updater.js  usytrace.webmanifest  worker.js
src/wasm/: usytrace.cpp  worker.js
